[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/CSS/Hand/handopen.png" type="Texture" id=1]
[ext_resource path="res://Hand.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/CSS/Hand/handgrab.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/CSS/Hand/handpoint.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/Fonts/tf2build.ttf" type="DynamicFontData" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "HandGrab",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "HandOpen",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "HandPoint",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.6805

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Hand" type="Node2D"]
scale = Vector2( 2, 2 )
z_index = 2
script = ExtResource( 2 )
id = 1

[node name="HandSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "HandOpen"
offset = Vector2( 5, 0 )

[node name="HandArea" type="Area2D" parent="."]
space_override = 1
gravity_point = true
collision_layer = 524288
collision_mask = 458752

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandArea"]
position = Vector2( 6.84612, -14.5221 )
rotation = 0.578492
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="HandArea"]
modulate = Color( 1, 0, 0, 1 )
margin_left = -40.174
margin_top = -20.823
margin_right = 37.826
margin_bottom = 43.177
custom_fonts/font = SubResource( 3 )
text = "P1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.5, -32 )

[connection signal="area_entered" from="HandArea" to="." method="_on_HandArea_area_entered"]
[connection signal="area_exited" from="HandArea" to="." method="_on_HandArea_area_exited"]
